dashboard event tile gap fixed

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -246,7 +246,7 @@
                     padding: 1px 0px;
                     width: 100%;
 
-                    @media (min-width: $breakpoint-lg) {
+                    @media (min-width: $breakpoint-md) {
                         gap: 8px;
                     }
 
